fix missing fonts directory. Fix center and middle align content in menu section etc"

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ html,body{
   background-image: url("../img/backgrounds/landing.jpg");
   background-size: cover;
 }
-#courses{
+section#courses.row.container{
   height:25%;
   width:100%;
   padding: 0;
@@ -25,29 +25,40 @@ html,body{
 }
 #bar{
   height:100%;
-  text-align: center;
   padding: 0;
 }
 #breakfast{
   height:100%;
   background-image: url("../img/foodtop/breakfast.jpg");
   background-size: cover;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-style: italic;
 }
 #lunch{
   height:100%;
   background-image: url("../img/foodtop/lunch.jpg");
   background-size: cover;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-style: italic;
 }
 #dinner{
   height:100%;
   background-image: url("../img/foodtop/dinner.jpg");
   background-size: cover;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-style: italic;
 }
 .bar-text{
   height:50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 #party-time{
   background-color: rgb(241,91,41);
